--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,9 +7,17 @@
         "mine": "Mine",
         "forget": "Forget Password",
         "email": "Email",
-        "enter_email": "Enter email address",
+        "enter_email": "Enter the email address",
+        "enter_phone":"Enter the mobile number",
+        "select_code":"Select area code",
+        "mail":"Mail",
+        "phone":"Phone",
+        "select_area":"Select area",
+        "email_or_phone":"Email address or mobile number",
+        "enter_email_phone":"Enter email address or mobile number",
+        "mobile_number":"Mobile number",
         "email_code": "Verification code",
-        "enter_code": "Enter email verification code",
+        "enter_code": "Enter the verification code",
         "send_code": "Send",
         "before_pass": "Original login password",
         "enter_before": "Enter the original login password",
@@ -46,12 +54,12 @@
         "trade_pass": "Transaction password",
         "edit_success": "Modified successfully",
         "confirm": "Confirm",
-        "assets_pass": "Fund password",
+        "assets_pass": "FND PW",
         "assets_manage": "Assets",
-        "level_one": "Level-one friends",
-        "level_two": "Level-two friends",
-        "level_three": "Level-thres friends",
-        "inv_total": "Level one friends",
+        "level_one": "Level-one",
+        "level_two": "Level-two",
+        "level_three": "Level-thres",
+        "inv_total": "Level All",
         "percent_one": "First generation:60%",
         "percent_two": "Second Generation:30%",
         "percent_three": "Third Generation:10%",
@@ -61,7 +69,7 @@
         "adv_remarl_3": "200*10*30%+ 1000*10*10% = $2200",
         "adv_remarl_4": "If a user invited 1000 first-generation friends, his first-generation friends invited 2 second-generation friends, and his second-generation friends invited 5 third-generation friends, this user would have 1000 first-generation friends and 2000 second-generation friends and 10000 third-generation friends. If the average money amount traded once by per person is $1000 and the handling fee is $10, then this user's commission 1000* 10*60%+ 2000* 10* 30%+ 10000*10* 10%=$22000",
         "inv_mine": "Invitation",
-        "detail": "Detailed Information",
+        "detail": "Invitation Rules",
         "inv_link": "Invitation Link",
         "click_login": "Click to login",
         "welcome": "Welcome to BIBI",
@@ -151,10 +159,10 @@
         "up_face_card": "Front of your ID card",
         "up_back_card": "Back of your ID card",
         "up_face": "A photo of your face",
-        "up_face_pic": "Please upload a photo of your face",
+        "up_face_pic": "A photo of your face",
         "submit": "Submit",
-        "verify_card": "Real Name Authentication",
-        "edit_login_pass": "Modify login password",
+        "verify_card": "AUT",
+        "edit_login_pass": "MOD PW",
         "security": "In order to ensure the safety of your funds, please complete the real-name authentication before trading",
         "safe_center": "Security",
         "about_us": "About us",
@@ -233,7 +241,14 @@
         "next":"Next step",
         "reject":"Rejected",
         "pay_away":"Payment method",
-        "limit_50":"Minimum deposit amount 50 USDT"
+        "limit_50":"Minimum deposit amount 50 USDT",
+        "fait_withdraw":"Fiat Withdrawal",
+        "protocol_withdraw":"Withdrawal on the chain",
+        "bank_num":"Bank card number",
+        "use_bank":"Available channels",
+        "enter_bank_num":"Enter the bank card number",
+        "min_50":"Minimum 50",
+        "min_10":"Minimum transaction amount 10 USDT"
     },
     "message": {
         "regis_success": "Registration is successful, it will be automatically go to login for you",
@@ -273,7 +288,12 @@
         "type_limit_amount":"Please enter a limit amount",
         "level":"Level",
         "total":"total",
-        "enter_amount":"Please enter recharge amount"
+        "enter_amount":"Please enter recharge amount",
+        "enter_bank_num":"Please enter bank card number",
+        "last_balance":"Exceeded maximum balance",
+        "min_10":"Minimum transaction amount 10 USDT",
+        "enter_phone":"Please enter the mobile number",
+        "enter_email_phone":"Please enter email address or mobile number"
     },
     "title": {
         "language_set": "Language"
