--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -8,6 +8,14 @@
         "forget": "Забыли пароль",
         "email": "Электронная почта ",
         "enter_email": "Пожалуйста, введите свой адрес электронной почты",
+        "enter_phone":"введите номер мобильного телефона",
+        "select_code":"Выберите код города",
+        "mail":"почта",
+        "phone":"Телефон",
+        "select_area":"Выберите область",
+        "email_or_phone":"Адрес электронной почты или номер мобильного телефона",
+        "enter_email_phone":"Введите адрес электронной почты или мобильный",
+        "mobile_number":"номер мобильного",
         "email_code": "Код подтверждения электронной почты",
         "enter_code": " код верификации",
         "send_code": "Отправить",
@@ -233,8 +241,13 @@
         "next":"Следующий шаг",
         "reject":"отклоненный",
         "pay_away":"метод оплаты",
-        "limit_50":"Минимальная сумма депозита 50 USDT"
-
+        "limit_50":"Минимальная сумма депозита 50 USDT",
+        "fait_withdraw":"Вывод фиата",
+        "protocol_withdraw":"Цепной вывод",
+        "bank_num":"Номер банковской карты",
+        "use_bank":"Доступные каналы",
+        "enter_bank_num":"введите номер банковской карты",
+        "min_50":"Минимум 50"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
@@ -274,7 +287,12 @@
         "type_limit_amount": "Пожалуйста, введите лимит суммы",
         "level":"уровень",
         "total":"общий",
-        "enter_amount":"Пожалуйста, введите сумму пополнения"
+        "enter_amount":"Пожалуйста, введите сумму пополнения",
+        "enter_bank_num":"пожалуйста, введите номер банковской карты",
+        "last_balance":"Превышен максимальный баланс",
+        "min_10":"Минимальная сумма транзакции 10 USDT",
+        "enter_phone":"Пожалуйста, введите номер мобильного телефона",
+        "enter_email_phone":"пожалуйста, введите адрес электронной почты или номер мобильного телефона"
     },
     "title": {
         "language_set": "Языковые настройки"
