--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -8,6 +8,14 @@
         "forget": "ลืมรหัสผ่าน",
         "email": "อีเมล",
         "enter_email": "กรุณาใส่ที่อยู่อีเมล",
+        "enter_phone":"ใส่เบอร์มือถือ",
+        "select_code":"เลือกรหัสพื้นที่",
+        "mail":"จดหมาย",
+        "phone":"โทรศัพท์",
+        "select_area":"เลือกพื้นที่",
+        "email_or_phone":"ที่อยู่อีเมลหรือหมายเลขโทรศัพท์มือถือ",
+        "enter_email_phone":"ใส่อีเมล์หรือเบอร์มือถือ",
+        "mobile_number":"เบอร์มือถือ",
         "email_code": "รหัสยืนยันอีเมล",
         "enter_code": "กรุณาใส่รหัสยืนยันอีเมล",
         "send_code": "ส่ง",
@@ -231,9 +239,15 @@
         "type_recharge_amount":"ใส่จำนวนเงินที่เติมเงิน",
         "recharge_fait_remark":"การแจ้งเตือน: กรุณาติดต่อฝ่ายบริการลูกค้าออนไลน์หลังการชำระเงิน",
         "next":"ขั้นตอนต่อไป",
+        "pay_away":"วิธีการชำระเงิน",
         "reject":"ถูกปฏิเสธ",
-        "limit_50":"จำนวนเงินฝากขั้นต่ำ 50 USDT"
-        
+        "limit_50":"จำนวนเงินฝากขั้นต่ำ 50 USDT",
+        "fait_withdraw":"การถอนคำสั่ง",
+        "protocol_withdraw":"การถอนเงินในห่วงโซ่",
+        "bank_num":"หมายเลขบัตรธนาคาร",
+        "use_bank":"ช่องทางที่มีจำหน่าย",
+        "enter_bank_num":"ใส่หมายเลขบัตรธนาคาร",
+        "min_50":"ขั้นต่ำ 50"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
@@ -274,7 +288,11 @@
         "level":"ระดับ",
         "total":"ทั้งหมด",
         "enter_amount":"กรุณากรอกจำนวนเงินที่จะเติม",
-        "pay_away":"วิธีการชำระเงิน"
+        "enter_bank_num":"กรุณาใส่หมายเลขบัตรธนาคาร",
+        "last_balance":"เกินดุลสูงสุด",
+        "min_10":"จำนวนธุรกรรมขั้นต่ำ 10 USDT",
+        "enter_phone":"กรุณากรอกเบอร์มือถือ",
+        "enter_email_phone":"กรุณากรอกอีเมล์หรือเบอร์มือถือ"
     },
     "title": {
         "language_set": "การตั้งค่าภาษา"
