--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -58,7 +58,7 @@
         "assets_manage": "Assets",
         "level_one": "Level-one",
         "level_two": "Level-two",
-        "level_three": "Level-thres",
+        "level_three": "Level-three",
         "inv_total": "Level All",
         "percent_one": "First generation:60%",
         "percent_two": "Second Generation:30%",
@@ -106,9 +106,13 @@
         "min": "Minimum",
         "all": "All",
         "use_balance": "Balance",
-        "withdraw_remark_1": "Withdrawal to the platform address is free of handle fee and the fee is returned to the current account.",
-        "withdraw_remark_2": "In order to ensure the security of funds, when you initiate a withdrawal, the platform needs to review, please be patient.",
-        "withdraw_remark_3": "The withdrawal amount limit for single transaction",
+        "withdraw_remark_1": "Minimum withdrawal amount: 50 U",
+        "withdraw_remark_2": "Maximum withdrawal amount for a single transaction: 10000 U",
+        "withdraw_remark_3": "Withdrawal time: Monday to Friday 10:00-18:00",
+        "withdraw_remark_4": "What conditions are met to withdraw cash: there is recharge and consumption records",
+        "withdraw_remark_5": "You can apply for several withdrawals per day: 3 times",
+        "withdraw_remark_6": "Maximum number of withdrawals per day: 1 time",
+        "withdraw_remark_7": "The largest order in processing is 1 (including the order under review/payment/payment failure/non-refundable order)",
         "recharge_fiat": "Recharge",
         "withdraw_fiat": "Withdraw",
         "hidden_0": "Hide the currency being 0",
