--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -106,9 +106,13 @@
         "min": "Минимум",
         "all": "Сумма",
         "use_balance": "Доступный остаток",
-        "withdraw_remark_1": "При выводе средств на адрес этой платформы плата за обработку не взимается, и комиссия будет возвращена на текущий счет.",
-        "withdraw_remark_2": "Чтобы обеспечить безопасность средств, когда вы инициируете снятие средств, платформа должна проверить, пожалуйста, наберитесь терпения",
-        "withdraw_remark_3": "Лимитная сумма вывода за одну транзацию",
+        "withdraw_remark_1": "Минимальная сумма вывода: 50 U",
+        "withdraw_remark_2": "Максимальная сумма вывода за одну транзакцию: 10000 U",
+        "withdraw_remark_3": "Время вывода: с понедельника по пятницу с 10:00 до 18:00.",
+        "withdraw_remark_4": "Какие условия соблюдаются для снятия наличных: есть записи пополнения и потребления",
+        "withdraw_remark_5": "Вы можете подать заявку на несколько выводов в день: 3 раза",
+        "withdraw_remark_6": "Максимальное количество выводов в день: 1 раз",
+        "withdraw_remark_7": "Самый большой заказ в обработке — 1 (включая заказ на рассмотрении/оплату/отказ платежа/заказ, не подлежащий возврату)",
         "recharge_fiat": "Пополнить счёт",
         "withdraw_fiat": "Вывод наличных",
         "hidden_0": "Скрыть нулевой баланс",
