--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -8,14 +8,14 @@
         "forget": "ลืมรหัสผ่าน",
         "email": "อีเมล",
         "enter_email": "กรุณาใส่ที่อยู่อีเมล",
-        "enter_phone":"ใส่เบอร์มือถือ",
-        "select_code":"เลือกรหัสพื้นที่",
-        "mail":"จดหมาย",
-        "phone":"โทรศัพท์",
-        "select_area":"เลือกพื้นที่",
-        "email_or_phone":"ที่อยู่อีเมลหรือหมายเลขโทรศัพท์มือถือ",
-        "enter_email_phone":"ใส่อีเมล์หรือเบอร์มือถือ",
-        "mobile_number":"เบอร์มือถือ",
+        "enter_phone": "ใส่เบอร์มือถือ",
+        "select_code": "เลือกรหัสพื้นที่",
+        "mail": "จดหมาย",
+        "phone": "โทรศัพท์",
+        "select_area": "เลือกพื้นที่",
+        "email_or_phone": "ที่อยู่อีเมลหรือหมายเลขโทรศัพท์มือถือ",
+        "enter_email_phone": "ใส่อีเมล์หรือเบอร์มือถือ",
+        "mobile_number": "เบอร์มือถือ",
         "email_code": "รหัสยืนยันอีเมล",
         "enter_code": "กรุณาใส่รหัสยืนยันอีเมล",
         "send_code": "ส่ง",
@@ -31,10 +31,10 @@
         "customer": "หน่วยบริการลูกค้า",
         "set": "ตั้งค่า",
         "help": "ช่วยเหลือ",
-        "home_help":"ช่วยเหลือ",
+        "home_help": "ช่วยเหลือ",
         "help_more": "คำถาม/แนวทางปฏิบัติ/ข้อมูล",
         "ann": "ประกาศ",
-        "home_ann":"ประกาศ",
+        "home_ann": "ประกาศ",
         "ann_more": "ข่าว/กิจกรรม/ข้อมูล",
         "assets": "ทรัพย์สินของฉัน",
         "assets_total_un": "สินทรัพย์รวมประมาณ",
@@ -106,9 +106,13 @@
         "min": "น้อยที่สุด",
         "all": "ทั้งหมด",
         "use_balance": "ยอดเงินคงเหลือใช้ได้",
-        "withdraw_remark_1": "ฟรีค่าทำเนียมเมื่อถอนเงินไปยังที่อยู่ของแพลตฟอร์มนี้ และค่าใช้จ่ายจะคืนไปยังบัญชีปัจจุบัน",
-        "withdraw_remark_2": "เพื่อความปลอดภัยของเงินทุน เมื่อคุณเริ่มต้นการถอนเงิน แพลตฟอร์มจำเป็นต้องตรวจสอบ โปรดอดทนรอ",
-        "withdraw_remark_3": "วงเงินถอนต่อครั้ง",
+        "withdraw_remark_1": "จำนวนถอนขั้นต่ำ: 50 U",
+        "withdraw_remark_2": "จำนวนถอนสูงสุดสำหรับธุรกรรมเดียว: 10000 U",
+        "withdraw_remark_3": "เวลาถอนเงิน: จันทร์-ศุกร์ 10:00-18:00",
+        "withdraw_remark_4": "ตรงตามเงื่อนไขการถอนเงินสด: มีบันทึกการเติมเงินและการบริโภค",
+        "withdraw_remark_5": "คุณสามารถสมัครถอนได้หลายครั้งต่อวัน: 3 ครั้ง",
+        "withdraw_remark_6": "จำนวนถอนสูงสุดต่อวัน: 1 ครั้ง",
+        "withdraw_remark_7": "คำสั่งซื้อที่ใหญ่ที่สุดในการประมวลผลคือ 1 (รวมถึงคำสั่งซื้อที่อยู่ระหว่างการตรวจสอบ/การชำระเงิน/การชำระเงินล้มเหลว/คำสั่งซื้อที่ไม่สามารถคืนเงินได้)",
         "recharge_fiat": "เติมเงิน",
         "withdraw_fiat": "ถอน",
         "hidden_0": "สกุลเงินที่ซ่อนอยู่เป็น 0",
@@ -230,24 +234,24 @@
         "has_no_address": "ยังไม่มีที่อยู่",
         "hint": "คำใบ้",
         "has_no_data": "ไม่มีข้อมูล",
-        "inv_title":"ส่วนลดคำเชิญ",
-        "id":"ไอดี",
-        "no_content":"ยังไม่มีเนื้อหา",
-        "recharge_fait":"เติมเงินสกุลเงิน Fiat",
-        "recharge_amount":"จำนวนเติมเงิน",
-        "recharge_protocol":"เติมเงินในเครือข่าย",
-        "type_recharge_amount":"ใส่จำนวนเงินที่เติมเงิน",
-        "recharge_fait_remark":"การแจ้งเตือน: กรุณาติดต่อฝ่ายบริการลูกค้าออนไลน์หลังการชำระเงิน",
-        "next":"ขั้นตอนต่อไป",
-        "pay_away":"วิธีการชำระเงิน",
-        "reject":"ถูกปฏิเสธ",
-        "limit_50":"จำนวนเงินฝากขั้นต่ำ 50 USDT",
-        "fait_withdraw":"การถอนคำสั่ง",
-        "protocol_withdraw":"การถอนเงินในห่วงโซ่",
-        "bank_num":"หมายเลขบัตรธนาคาร",
-        "use_bank":"ช่องทางที่มีจำหน่าย",
-        "enter_bank_num":"ใส่หมายเลขบัตรธนาคาร",
-        "min_50":"ขั้นต่ำ 50"
+        "inv_title": "ส่วนลดคำเชิญ",
+        "id": "ไอดี",
+        "no_content": "ยังไม่มีเนื้อหา",
+        "recharge_fait": "เติมเงินสกุลเงิน Fiat",
+        "recharge_amount": "จำนวนเติมเงิน",
+        "recharge_protocol": "เติมเงินในเครือข่าย",
+        "type_recharge_amount": "ใส่จำนวนเงินที่เติมเงิน",
+        "recharge_fait_remark": "การแจ้งเตือน: กรุณาติดต่อฝ่ายบริการลูกค้าออนไลน์หลังการชำระเงิน",
+        "next": "ขั้นตอนต่อไป",
+        "pay_away": "วิธีการชำระเงิน",
+        "reject": "ถูกปฏิเสธ",
+        "limit_50": "จำนวนเงินฝากขั้นต่ำ 50 USDT",
+        "fait_withdraw": "การถอนคำสั่ง",
+        "protocol_withdraw": "การถอนเงินในห่วงโซ่",
+        "bank_num": "หมายเลขบัตรธนาคาร",
+        "use_bank": "ช่องทางที่มีจำหน่าย",
+        "enter_bank_num": "ใส่หมายเลขบัตรธนาคาร",
+        "min_50": "ขั้นต่ำ 50"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
@@ -282,33 +286,33 @@
         "save_success": "บันทึกสำเร็จแล้ว",
         "add_optional": "เพิ่มตัวเลือกเรียบร้อยแล้ว",
         "cancel_optional": "ยกเลิกตัวเลือกความสำเร็จ",
-        "upload_success":"อัพโหลดเรียบร้อยแล้ว",
-        "type_trade_amount":"กรุณากรอกจำนวนเงินที่ทำรายการ",
-        "type_limit_amount":"กรุณาใส่จำนวนจำกัด",
-        "level":"ระดับ",
-        "total":"ทั้งหมด",
-        "enter_amount":"กรุณากรอกจำนวนเงินที่จะเติม",
-        "enter_bank_num":"กรุณาใส่หมายเลขบัตรธนาคาร",
-        "last_balance":"เกินดุลสูงสุด",
-        "min_10":"จำนวนธุรกรรมขั้นต่ำ 10 USDT",
-        "enter_phone":"กรุณากรอกเบอร์มือถือ",
-        "enter_email_phone":"กรุณากรอกอีเมล์หรือเบอร์มือถือ"
+        "upload_success": "อัพโหลดเรียบร้อยแล้ว",
+        "type_trade_amount": "กรุณากรอกจำนวนเงินที่ทำรายการ",
+        "type_limit_amount": "กรุณาใส่จำนวนจำกัด",
+        "level": "ระดับ",
+        "total": "ทั้งหมด",
+        "enter_amount": "กรุณากรอกจำนวนเงินที่จะเติม",
+        "enter_bank_num": "กรุณาใส่หมายเลขบัตรธนาคาร",
+        "last_balance": "เกินดุลสูงสุด",
+        "min_10": "จำนวนธุรกรรมขั้นต่ำ 10 USDT",
+        "enter_phone": "กรุณากรอกเบอร์มือถือ",
+        "enter_email_phone": "กรุณากรอกอีเมล์หรือเบอร์มือถือ"
     },
     "title": {
         "language_set": "การตั้งค่าภาษา"
     },
-    "invite":{
-        "rules":"กฎ",
-        "invitation":"คำเชิญของฉัน",
-        "share":"แบ่งปันและรับรางวัล",
-        "inv_code":"รหัสการเชิญ",
-        "share_link":"ลิงค์อ้างอิง",
-        "no":"No.",
-        "waiting":"การรอคอย",
-        "inv_more":"เชิญเพื่อน",
-        "save":"กดที่ภาพค้างไว้เพื่อบันทึก",
-        "share_to":"แบ่งปันไปที่",
-        "code":"รหัสการเชิญ",
-        "enter_code":"ใส่รหัสเชิญ(ไม่บังคับ)"
+    "invite": {
+        "rules": "กฎ",
+        "invitation": "คำเชิญของฉัน",
+        "share": "แบ่งปันและรับรางวัล",
+        "inv_code": "รหัสการเชิญ",
+        "share_link": "ลิงค์อ้างอิง",
+        "no": "No.",
+        "waiting": "การรอคอย",
+        "inv_more": "เชิญเพื่อน",
+        "save": "กดที่ภาพค้างไว้เพื่อบันทึก",
+        "share_to": "แบ่งปันไปที่",
+        "code": "รหัสการเชิญ",
+        "enter_code": "ใส่รหัสเชิญ(ไม่บังคับ)"
     }
 }
