--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -251,7 +251,19 @@
         "bank_num":"Номер банковской карты",
         "use_bank":"Доступные каналы",
         "enter_bank_num":"введите номер банковской карты",
-        "min_50":"Минимум 50"
+        "min_50":"Минимум 50",
+        "back_home":"вернуться на домашнюю страницу",
+        "guide_title":"Как быстро получить доступ к BIBI на iOS",
+        "guide_1":"Откройте браузер Safari, введите «www.bibitrades.com» и посетите, выберите меню в нижней части браузера (отмечено красным) и перейдите к следующему шагу.",
+        "guide_2":"После появления меню выберите «Добавить на главный экран» (отмечено красным) и перейдите к следующему шагу.",
+        "guide_3":"После входа по этой ссылке введите соответствующую информацию (она идет с ней по умолчанию, но вам не нужно вводить ее) и, наконец, нажмите в правом верхнем углу (отмечен красным), чтобы завершить добавление",
+        "guide_4":"После завершения вышеуказанного процесса вы можете увидеть вход в биби (отмечен красным) на рабочем столе вашего мобильного телефона, вы можете напрямую щелкнуть, чтобы открыть BIBI.",
+        "one":"один",
+        "two":"два",
+        "three":"три",
+        "four":"четыре",
+        "download":"Скачать",
+        "download_remark":"Загрузите приложение BIBI для более удобных транзакций"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
