--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -16,8 +16,8 @@
         "email_or_phone":"Адрес электронной почты или номер мобильного телефона",
         "enter_email_phone":"Введите адрес электронной почты или мобильный",
         "mobile_number":"номер мобильного",
-        "email_code": "Код подтверждения электронной почты",
-        "enter_code": " код верификации",
+        "email_code": "код верификации",
+        "enter_code": "код верификации",
         "send_code": "Отправить",
         "before_pass": "Старый пароль для входа  ",
         "enter_before": "Пожалуйста, введите старый пароль для входа",
