--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -16,8 +16,8 @@
         "email_or_phone": "ที่อยู่อีเมลหรือหมายเลขโทรศัพท์มือถือ",
         "enter_email_phone": "ใส่อีเมล์หรือเบอร์มือถือ",
         "mobile_number": "เบอร์มือถือ",
-        "email_code": "รหัสยืนยันอีเมล",
-        "enter_code": "กรุณาใส่รหัสยืนยันอีเมล",
+        "email_code": "รหัสยืนยัน",
+        "enter_code": "กรุณากรอกรหัสยืนยัน",
         "send_code": "ส่ง",
         "before_pass": "รหัสผ่านเดิมที่เข้าสู่ระบบ",
         "enter_before": "กรุณาใส่รหัสผ่านเดิมที่เข้าสู่ระบบ",
