--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -40,7 +40,8 @@
         "assets_total_un": "Общая стоимость активов",
         "for_u": "Конвертировать",
         "up_list": "Таблица повышения цен",
-        "vol": "Количество",
+        "vol": "Торговая скидка",
+        "vol_inv":"Пригласительный бонус",
         "login_pass": "Пароль для входа",
         "enter_login_pass": "Пожалуйста, введите пароль для входа",
         "login": "Войти",
@@ -263,7 +264,11 @@
         "three":"три",
         "four":"четыре",
         "download":"Скачать",
-        "download_remark":"Загрузите приложение BIBI для более удобных транзакций"
+        "download_remark":"Загрузите приложение BIBI для более удобных транзакций",
+        "mission":"комиссия",
+        "recharge_reward":"Пополнить счет",
+        "recharge_trade":"торговая скидка",
+        "rebate":"скидка"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
