--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -40,7 +40,8 @@
         "assets_total_un": "สินทรัพย์รวมประมาณ",
         "for_u": "คิดเป็นเงิน ",
         "up_list": "รายชื่อผู้ได้รับ",
-        "vol": "จำนวน",
+        "vol": "ส่วนลดการซื้อขาย",
+        "vol_inv":"โบนัสคำเชิญ",
         "login_pass": "รหัสผ่านในการเข้าสู่ระบบ",
         "enter_login_pass": "กรุณาใส่รหัสผ่านในการเข้าสู่ระบบ",
         "login": "เข้าสู่ระบบ",
@@ -50,7 +51,7 @@
         "sell": "ขาย",
         "recharge": "เติมเงิน",
         "withdraw": "ถอนเงิน",
-        "fee": "ค่าทำเนียม",
+        "fee": "ค่าดำเนินการ",
         "trade_pass": "รหัสผ่านการทำธุรกรรม",
         "edit_success": "แก้ไขสำเร็จ",
         "confirm": "ยืนยัน",
@@ -263,7 +264,11 @@
         "three":"สาม",
         "four":"โฟร์",
         "download":"ดาวน์โหลด",
-        "download_remark":"ดาวน์โหลดแอป BIBI เพื่อการทำธุรกรรมที่สะดวกยิ่งขึ้น"
+        "download_remark":"ดาวน์โหลดแอป BIBI เพื่อการทำธุรกรรมที่สะดวกยิ่งขึ้น",
+        "mission":"คณะกรรมการ",
+        "recharge_reward":"เงินคืนเติมเงิน",
+        "recharge_trade":"ส่วนลดการซื้อขาย",
+        "rebate":"เงินคืน"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
