--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -251,7 +251,7 @@
         "protocol_withdraw":"Цепной вывод",
         "bank_num":"Номер банковской карты",
         "use_bank":"Доступные каналы",
-        "enter_bank_num":"введите номер банковской карты",
+        "enter_bank_num":"Введите номер банковской карты/счета",
         "min_50":"Минимум 50",
         "back_home":"вернуться на домашнюю страницу",
         "guide_title":"Как быстро получить доступ к BIBI на iOS",
@@ -268,7 +268,14 @@
         "mission":"комиссия",
         "recharge_reward":"Пополнить счет",
         "recharge_trade":"торговая скидка",
-        "rebate":"скидка"
+        "rebate":"скидка",
+        "select_bank":"Выберите банк",
+        "name":"Имя",
+        "card_name":"Номер банковской карты/счета",
+        "enter_name":"введите имя",
+        "enter_bank":"выберите банк",
+        "not_found":"ошибка доступа"
+
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
@@ -309,7 +316,7 @@
         "level":"уровень",
         "total":"общий",
         "enter_amount":"Пожалуйста, введите сумму пополнения",
-        "enter_bank_num":"пожалуйста, введите номер банковской карты",
+        "enter_bank_num":"Пожалуйста, введите номер банковской карты/счета",
         "last_balance":"Превышен максимальный баланс",
         "min_10":"Минимальная сумма транзакции 10 USDT",
         "enter_phone":"Пожалуйста, введите номер мобильного телефона",
