--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -251,7 +251,7 @@
         "protocol_withdraw": "การถอนเงินในห่วงโซ่",
         "bank_num": "หมายเลขบัตรธนาคาร",
         "use_bank": "ช่องทางที่มีจำหน่าย",
-        "enter_bank_num": "ใส่หมายเลขบัตรธนาคาร",
+        "enter_bank_num": "ใส่หมายเลขบัตรธนาคาร/บัญชี",
         "min_50": "ขั้นต่ำ 50",
         "back_home":"กลับหน้าแรก",
         "guide_title":"วิธีเข้าถึง BIBI บน iOS . อย่างรวดเร็ว",
@@ -268,7 +268,13 @@
         "mission":"คณะกรรมการ",
         "recharge_reward":"เงินคืนเติมเงิน",
         "recharge_trade":"ส่วนลดการซื้อขาย",
-        "rebate":"เงินคืน"
+        "rebate":"เงินคืน",
+        "select_bank":"เลือกธนาคาร",
+        "name":"ชื่อ",
+        "card_name":"หมายเลขบัตรธนาคาร/บัญชี",
+        "enter_name":"ใส่ชื่อ",
+        "enter_bank":"เลือกธนาคาร",
+        "not_found":"ข้อผิดพลาดในการเข้าถึง"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
@@ -309,7 +315,7 @@
         "level": "ระดับ",
         "total": "ทั้งหมด",
         "enter_amount": "กรุณากรอกจำนวนเงินที่จะเติม",
-        "enter_bank_num": "กรุณาใส่หมายเลขบัตรธนาคาร",
+        "enter_bank_num": "กรุณากรอกหมายเลขบัตรธนาคาร/บัญชี",
         "last_balance": "เกินดุลสูงสุด",
         "enter_phone": "กรุณากรอกเบอร์มือถือ",
         "enter_email_phone": "กรุณากรอกอีเมล์หรือเบอร์มือถือ",
