--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -274,8 +274,9 @@
         "card_name":"Номер банковской карты/счета",
         "enter_name":"введите имя",
         "enter_bank":"выберите банк",
-        "not_found":"ошибка доступа"
-
+        "not_found":"ошибка доступа",
+        "need_read":"Я прочитал и согласен с ",
+        "protocol":"Политика конфиденциальности"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
@@ -320,7 +321,8 @@
         "last_balance":"Превышен максимальный баланс",
         "min_10":"Минимальная сумма транзакции 10 USDT",
         "enter_phone":"Пожалуйста, введите номер мобильного телефона",
-        "enter_email_phone":"пожалуйста, введите адрес электронной почты или номер мобильного телефона"
+        "enter_email_phone":"пожалуйста, введите адрес электронной почты или номер мобильного телефона",
+        "agree_protocol":"Пожалуйста, прочтите и согласитесь с Политикой конфиденциальности"
     },
     "title": {
         "language_set": "Языковые настройки"
