--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -274,7 +274,9 @@
         "card_name":"หมายเลขบัตรธนาคาร/บัญชี",
         "enter_name":"ใส่ชื่อ",
         "enter_bank":"เลือกธนาคาร",
-        "not_found":"ข้อผิดพลาดในการเข้าถึง"
+        "not_found":"ข้อผิดพลาดในการเข้าถึง",
+        "need_read":"ฉันได้อ่านและยอมรับ ",
+        "protocol":"นโยบายความเป็นส่วนตัว"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
@@ -319,7 +321,8 @@
         "last_balance": "เกินดุลสูงสุด",
         "enter_phone": "กรุณากรอกเบอร์มือถือ",
         "enter_email_phone": "กรุณากรอกอีเมล์หรือเบอร์มือถือ",
-        "min_10": "จำนวนธุรกรรมขั้นต่ำ 10 USDT"
+        "min_10": "จำนวนธุรกรรมขั้นต่ำ 10 USDT",
+        "agree_protocol":"โปรดอ่านและยอมรับนโยบายความเป็นส่วนตัว"
     },
     "title": {
         "language_set": "การตั้งค่าภาษา"
