--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -274,7 +274,9 @@
         "card_name":"Bank card number/account",
         "enter_name":"Enter name",
         "enter_bank":"Select a bank",
-        "not_found":"Access error"
+        "not_found":"Access error",
+        "need_read":"I have read and agree to the ",
+        "protocol":"Privacy Policy"
     },
     "message": {
         "regis_success": "Registration is successful, it will be automatically go to login for you",
@@ -319,7 +321,8 @@
         "last_balance":"Exceeded maximum balance",
         "min_10":"Minimum transaction amount 10 USDT",
         "enter_phone":"Please enter the mobile number",
-        "enter_email_phone":"Please enter email address or mobile number"
+        "enter_email_phone":"Please enter email address or mobile number",
+        "agree_protocol":"Please read and agree to the Privacy Policy"
     },
     "title": {
         "language_set": "Language"
