--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -276,7 +276,9 @@
         "enter_bank":"выберите банк",
         "not_found":"ошибка доступа",
         "need_read":"Я прочитал и согласен с ",
-        "protocol":"Политика конфиденциальности"
+        "protocol":"Политика конфиденциальности",
+        "experience":"Золотой опыт",
+        "experience_order":"Опыт Золотого Ордена"
     },
     "message": {
         "regis_success": "Регистрация прошла успешно, вы автоматически войдете в систему",
