--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -276,7 +276,9 @@
         "enter_bank":"เลือกธนาคาร",
         "not_found":"ข้อผิดพลาดในการเข้าถึง",
         "need_read":"ฉันได้อ่านและยอมรับ ",
-        "protocol":"นโยบายความเป็นส่วนตัว"
+        "protocol":"นโยบายความเป็นส่วนตัว",
+        "experience":"ประสบการณ์ทอง",
+        "experience_order":"สัมผัสประสบการณ์สั่งทอง"
     },
     "message": {
         "regis_success": "ลงทะเบียนสำเร็จระบบจะเข้าสู่ระบบให้คุณโดยอัตโนมัติ",
