--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -10,6 +10,8 @@
         "enter_email": "Enter the email address",
         "enter_phone":"Enter the mobile number",
         "select_code":"Select area code",
+        "banner_th":"Easily buy and sell and manage your digital assets.",
+        "banner_th_title":"Full-featured one-click trading platform",
         "mail":"Mail",
         "phone":"Phone",
         "select_area":"Select area",
