--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -10,6 +10,8 @@
         "enter_email": "Пожалуйста, введите свой адрес электронной почты",
         "enter_phone":"введите номер мобильного телефона",
         "select_code":"Выберите код города",
+        "banner_th":"Легко покупать и продавать и управлять своими цифровыми активами.",
+        "banner_th_title":"Полнофункциональная торговая платформа в один клик",
         "mail":"почта",
         "phone":"Телефон",
         "select_area":"Выберите область",
