--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -10,6 +10,8 @@
         "enter_email": "กรุณาใส่ที่อยู่อีเมล",
         "enter_phone": "ใส่เบอร์มือถือ",
         "select_code": "เลือกรหัสพื้นที่",
+        "banner_th":"ซื้อและขายได้อย่างง่ายดายและจัดการสินทรัพย์ดิจิตอลของคุณ",
+        "banner_th_title":"เต็มรูปแบบหนึ่งคลิกแพลตฟอร์มการซื้อขาย",
         "mail": "จดหมาย",
         "phone": "โทรศัพท์",
         "select_area": "เลือกพื้นที่",
