--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -326,7 +326,8 @@
         "min_10":"Минимальная сумма транзакции 10 USDT",
         "enter_phone":"Пожалуйста, введите номер мобильного телефона",
         "enter_email_phone":"пожалуйста, введите адрес электронной почты или номер мобильного телефона",
-        "agree_protocol":"Пожалуйста, прочтите и согласитесь с Политикой конфиденциальности"
+        "agree_protocol":"Пожалуйста, прочтите и согласитесь с Политикой конфиденциальности",
+        "enter_invite":"Пожалуйста, введите код приглашения"
     },
     "title": {
         "language_set": "Языковые настройки"
