--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -326,7 +326,8 @@
         "enter_phone": "กรุณากรอกเบอร์มือถือ",
         "enter_email_phone": "กรุณากรอกอีเมล์หรือเบอร์มือถือ",
         "min_10": "จำนวนธุรกรรมขั้นต่ำ 10 USDT",
-        "agree_protocol":"โปรดอ่านและยอมรับนโยบายความเป็นส่วนตัว"
+        "agree_protocol":"โปรดอ่านและยอมรับนโยบายความเป็นส่วนตัว",
+        "enter_invite":"กรุณาใส่รหัสเชิญ"
     },
     "title": {
         "language_set": "การตั้งค่าภาษา"
