--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -344,6 +344,6 @@
         "save":"Long press the picture to save",
         "share_to":"Share to",
         "code":"Invitation code",
-        "enter_code":"Enter the invitation code(optional)"
+        "enter_code":"Enter the invitation code"
     }
 }
