--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -344,6 +344,6 @@
         "save":"Нажмите и удерживайте, чтобы сохранить",
         "share_to":"Поделиться с",
         "code":"Код приглашения",
-        "enter_code":"Введите код приглашения(необязательно)"
+        "enter_code":"Введите код приглашения"
     }
 }
