--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -344,6 +344,6 @@
         "save": "กดที่ภาพค้างไว้เพื่อบันทึก",
         "share_to": "แบ่งปันไปที่",
         "code": "รหัสการเชิญ",
-        "enter_code": "ใส่รหัสเชิญ(ไม่บังคับ)"
+        "enter_code": "ใส่รหัสเชิญ"
     }
 }
