--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -257,7 +257,7 @@
         "min_50": "ขั้นต่ำ 50",
         "back_home":"กลับหน้าแรก",
         "guide_title":"วิธีเข้าถึง BIBI บน iOS . อย่างรวดเร็ว",
-        "guide_1":"เปิดเบราว์เซอร์ Safari ป้อน 'www.bibitrades.com' แล้วไปที่ เลือกเมนูที่ด้านล่างของเบราว์เซอร์ (ทำเครื่องหมายเป็นสีแดง) และไปที่ขั้นตอนถัดไป",
+        "guide_1":"เปิดเบราว์เซอร์ Safari ป้อน '{{value}}' แล้วไปที่ เลือกเมนูที่ด้านล่างของเบราว์เซอร์ (ทำเครื่องหมายเป็นสีแดง) และไปที่ขั้นตอนถัดไป",
         "guide_2":"หลังจากที่เมนูปรากฏขึ้น ให้เลือก 'เพิ่มไปยังหน้าจอหลัก' (เครื่องหมายสีแดง) และไปที่ขั้นตอนถัดไป",
         "guide_3":"หลังจากป้อนลิงก์นี้แล้ว โปรดป้อนข้อมูลที่เกี่ยวข้อง (โดยค่าเริ่มต้นจะมาพร้อมกับลิงก์นี้ แต่คุณไม่จำเป็นต้องป้อน) และสุดท้ายให้คลิกที่มุมบนขวา (เครื่องหมายสีแดง) เพื่อเติมให้สมบูรณ์",
         "guide_4":"หลังจากเสร็จสิ้นขั้นตอนข้างต้น คุณจะเห็นทางเข้า bibi (เครื่องหมายสีแดง) บนเดสก์ท็อปของโทรศัพท์มือถือของคุณ คุณสามารถคลิกเพื่อเปิด BIBI ได้โดยตรง",
