--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -257,7 +257,7 @@
         "min_50":"Minimum 50",
         "back_home":"Back homepage",
         "guide_title":"How to quickly access BIBI on iOS",
-        "guide_1":"Open the safari browser, enter 'www.bibitrades.com' and visit, select the menu at the bottom of the browser (marked in red) and go to the next step",
+        "guide_1":"Open the safari browser, enter '{{value}}' and visit, select the menu at the bottom of the browser (marked in red) and go to the next step",
         "guide_2":"After the menu pops up, select 'add to home screen' (marked in red) and go to the next step",
         "guide_3":"After entering this link, please enter the relevant information (it comes with it by default, but you don't need to enter it), and finally click the upper right corner (marked in red) to complete the addition",
         "guide_4":"After completing the above process, you can see the bibi entrance (marked in red) on your mobile phone desktop, you can directly click to open BIBI",
